@@ -1,3 +1,7 @@
+2002-10-10  Marcus Brinkmann  <marcus@gnu.org>
+
+	* display.c (handle_esc_bracket): Implement <bw> for <cub1>.
+
 2002-09-22  Marcus Brinkmann  <marcus@gnu.org>
 
 	* pager.c, pager.h: New file.
